# GP_DocumentProcessing

./: .env.sample  README.md  docker-compose.yml  pyproject.toml  test_data.txt
config/: settings.py  urls.py
documents/: admin.py  models.py  paginators.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
documents/migrations/: 0001_initial.py  0002_initial.py  0003_alter_document_file.py
documents/test_file/: test_file.txt
users/: models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_user_tg_chat_id_remove_user_tg_name.py
